@@ -7,7 +7,7 @@
 		"name": "Suki WordPress Theme",
 		"url": "https://sukiwp.com/#about"
 	},
-	"version": "1.3.0",
+	"version": "1.3.0-beta",
 	"license": "GPL-2.0-or-later",
 	"keywords": [
 		"two-columns",
